# rust-timespan

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
examples/: contains.rs  convert.rs  duration.rs
src/: date_span.rs  date_time_span.rs  datespan.rs  datespan_test.rs  delayed_format.rs  delayed_format_test.rs  error.rs  lib.rs  parse_from_str.rs  span.rs  span_test.rs  spanable.rs  timespan.rs  timespan_test.rs  traits.rs
src/naive/: mod.rs  naive_date_span.rs  naive_date_time_span.rs  naive_time_span.rs
tests/: christmas.rs  morning.rs  ramadan.rs  tatort.rs  wacken.rs
