[package]
name = "timespan"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
description = "A simple timespan for chrono times."
documentation = "https://docs.rs/timespan/"
homepage = "https://fin-ger.github.io/rust-timespan/"
repository = "https://github.com/fin-ger/rust-timespan/"
readme = "README.md"
keywords = ["timespan", "chrono"]
categories = ["date-and-time"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
chrono = "0.4.9"
regex = "1.3.1"
serde = { version = "1.0.101", optional = true }
chrono-tz = { version = "0.5.1", optional = true }

[dev-dependencies]
serde_json = "1.0.40"
serde_derive = "1.0.101"
chrono-tz = "0.5.1"

[features]
default = []

with-serde = ["serde"]
with-chrono-tz = ["chrono-tz"]

[badges]
travis-ci = { repository = "fin-ger/rust-timespan/", branch = "master" }

[package.metadata.docs.rs]
all-features = true

[lib]
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = false
